# lib/api-spec/openapi.yaml
@@ -324,15 +324,19 @@ components:
           type: integer
         speed:
           type: integer
-        strength:
+        power:
           type: integer
-        dexterity:
+        vitality:
           type: integer
-        constitution:
+        spirit:
           type: integer
-        intelligence:
+        agility:
           type: integer
-        wisdom:
+        endurance:
+          type: integer
+        precision:
+          type: integer
+        willpower:
           type: integer
         charisma:
           type: integer
@@ -386,23 +390,31 @@ components:
           type: integer
         speed:
           type: integer
-        strength:
+        power:
           type: integer
           minimum: 1
           maximum: 30
-        dexterity:
+        vitality:
           type: integer
           minimum: 1
           maximum: 30
-        constitution:
+        spirit:
           type: integer
           minimum: 1
           maximum: 30
-        intelligence:
+        agility:
           type: integer
           minimum: 1
           maximum: 30
-        wisdom:
+        endurance:
+          type: integer
+          minimum: 1
+          maximum: 30
+        precision:
+          type: integer
+          minimum: 1
+          maximum: 30
+        willpower:
           type: integer
           minimum: 1
           maximum: 30
@@ -437,23 +449,31 @@ components:
           type: integer
         speed:
           type: integer
-        strength:
+        power:
           type: integer
           minimum: 1
           maximum: 30
-        dexterity:
+        vitality:
           type: integer
           minimum: 1
           maximum: 30
-        constitution:
+        spirit:
           type: integer
           minimum: 1
           maximum: 30
-        intelligence:
+        agility:
           type: integer
           minimum: 1
           maximum: 30
-        wisdom:
+        endurance:
+          type: integer
+          minimum: 1
+          maximum: 30
+        precision:
+          type: integer
+          minimum: 1
+          maximum: 30
+        willpower:
           type: integer
           minimum: 1
           maximum: 30
