# lib/db/src/schema/characters.ts
@@ -12,11 +12,13 @@ export const charactersTable = pgTable("characters", {
   currentHp: integer("current_hp").notNull(),
   armorClass: integer("armor_class").notNull().default(10),
   speed: integer("speed").notNull().default(30),
-  strength: integer("strength").notNull().default(10),
-  dexterity: integer("dexterity").notNull().default(10),
-  constitution: integer("constitution").notNull().default(10),
-  intelligence: integer("intelligence").notNull().default(10),
-  wisdom: integer("wisdom").notNull().default(10),
+  power: integer("power").notNull().default(10),
+  vitality: integer("vitality").notNull().default(10),
+  spirit: integer("spirit").notNull().default(10),
+  agility: integer("agility").notNull().default(10),
+  endurance: integer("endurance").notNull().default(10),
+  precision: integer("precision").notNull().default(10),
+  willpower: integer("willpower").notNull().default(10),
   charisma: integer("charisma").notNull().default(10),
   background: text("background"),
   backstory: text("backstory"),
